[workspace]
members = ["turn-types", "turn-client-proto", "turn-server-proto", "fuzz"]
default-members = ["turn-types", "turn-client-proto", "turn-server-proto"]
resolver = "2"

[workspace.package]
version = "0.4.0-alpha2"
repository = "https://github.com/ystreet/turn-proto"
edition = "2021"
rust-version = "1.77.0"

[workspace.dependencies]
byteorder = { version = "1", default-features = false }
stun-proto = { version = "1.0.0", default-features = false }
stun-types = { version = "1.0.0", default-features = false }
turn-types = { path = "turn-types", version = "0.4.0-alpha2", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3"
criterion = "0.7"
rustls = "0.23"
rustls-platform-verifier = "0.6"
smallvec = "1"
openssl = "0.10"

[profile.bench]
codegen-units = 16
lto = "thin"
