[workspace]
members = [
    "turn-types",
    "turn-client-proto",
    "turn-client-openssl",
    "turn-client-rustls",
    "turn-server-proto",
    "turn-server-openssl",
    "turn-server-rustls",
    "api-tests",
    "fuzz"
]
default-members = [
    "turn-types",
    "turn-client-proto",
    "turn-server-proto",
    "api-tests"
]
exclude = [
    "turn-client-dimpl",
    "turn-server-dimpl",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
repository = "https://github.com/ystreet/turn-proto"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
turn-client-proto = { version = "0.7.0", path = "turn-client-proto" }
turn-server-proto = { version = "0.7.0", path = "turn-server-proto" }
turn-types = { version = "0.7.0", path = "turn-types", default-features = false }
api-tests = { path = "api-tests" }

base64 = "0.22"
byteorder = { version = "1", default-features = false }
stun-proto = { version = "2.0.0", default-features = false }
stun-types = { version = "2.0.0", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = "0.3"
criterion = "0.7"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-platform-verifier = "0.6"
smallvec = "1"
openssl = "0.10"

[profile.bench]
codegen-units = 16
lto = "thin"
