[package]
name = "api-tests"
description = "API tests for turn-proto"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
publish = false
edition.workspace = true
repository.workspace = true

[dependencies]
stun-proto.workspace = true
turn-client-proto.workspace = true
turn-server-proto.workspace = true
turn-types.workspace = true
tracing = { workspace = true, features = ["std"]}
tracing-subscriber.workspace = true

[dev-dependencies]

[features]
default = []
