[package]
name = "Examples"
description = "Examples for turn-proto"
version = "0.6.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
publish = false
edition = "2024"

[workspace]

[dependencies]
turn-client-proto = { version = "0.7.0", path = "../turn-client-proto" }
turn-client-dimpl = { version = "0.1.0", path = "../turn-client-dimpl" }
turn-client-openssl = { version = "0.1.0", path = "../turn-client-openssl" }
turn-client-rustls = { version = "0.1.0", path = "../turn-client-rustls" }

clap = {version = "4", features = ["derive"]}
stun-proto = "2"
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"]}
tracing-subscriber = "0.3"

rustls = { version = "0.23", features = ["ring"]}
rustls-platform-verifier = "0.6"

[dev-dependencies]

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
