[package]
name = "turn-client-proto"
description = "TURN protocol in a sans-IO fashion"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-client-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
stun-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
sans-io-time.workspace = true
turn-types = { path = "../turn-types", version = "0.3.0" }

rustls = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
turn-server-proto = { path = "../turn-server-proto" }
clap = {version = "4", features = ["derive"]}
criterion.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
rcgen = "0.14"
sans-io-time = { workspace = true, features = ["std"] }

[features]
default = ["rustls"]
rustls = ["dep:rustls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[[bench]]
name = "sendrecv"
harness = false
