[package]
name = "turn-client-proto"
description = "TURN protocol in a sans-IO fashion"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-client-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
stun-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
turn-types.workspace = true

rustls = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
dimpl = { workspace = true, optional = true }

[dev-dependencies]
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
turn-server-proto = { path = "../turn-server-proto", features = ["dimpl"] }
clap = {version = "4", features = ["derive"]}
criterion.workspace = true
rustls = { workspace = true, features = ["ring"]}
rustls-platform-verifier.workspace = true
stun-proto.workspace = true
rcgen = "0.14"

[features]
default = ["rustls", "std", "openssl", "dimpl"]
std = ["thiserror/std", "turn-types/std", "stun-proto/std"]
rustls = ["dep:rustls", "std", "rustls/std"]
openssl = ["dep:openssl", "std"]
dimpl = ["dep:dimpl", "std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[[example]]
name = "turn"
required-features = ["default"]

[[bench]]
name = "sendrecv"
harness = false
