[package]
name = "turn-server-dimpl"
description = "TURN server protocol in a sans-IO fashion (Dimpl)"
version = "0.1.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-server-dimpl"
edition = "2024"
repository = "https://github.com/ystreet/turn-proto"
rust-version = "1.85.0"

[workspace]

[features]
default = ["std"]
std = []

[dependencies]
dimpl = "0.4"
turn-server-proto = { version = "0.7.0", path = "../turn-server-proto" }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
turn-client-proto = { version = "0.7.0", path = "../turn-client-proto" }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
