[package]
name = "turn-server-proto"
description = "TURN server protocol in a sans-IO fashion"
version = "0.2.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-server-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["dep:rustls"]

[dependencies]
byteorder.workspace = true
stun-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true
turn-types = { path = "../turn-types", version = "0.1.0" }
rand.workspace = true
rustls = { workspace = true, optional = true }

[dev-dependencies]
rustls.workspace = true
turn-client-proto = { path = "../turn-client-proto" }
tracing-subscriber.workspace = true
