[package]
name = "turn-server-proto"
description = "TURN server protocol in a sans-IO fashion"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-server-proto"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["dep:rustls"]

[dependencies]
byteorder.workspace = true
stun-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true
turn-types = { path = "../turn-types", version = "0.3.0" }
rand.workspace = true
rustls = { workspace = true, optional = true }
sans-io-time.workspace = true
smallvec = "1"

[dev-dependencies]
rustls.workspace = true
turn-client-proto = { path = "../turn-client-proto" }
tracing-subscriber.workspace = true
