[package]
name = "turn-server-rustls"
description = "TURN server protocol in a sans-IO fashion (Rustls)"
version = "0.1.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-server-rustls"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
rustls.workspace = true

turn-server-proto.workspace = true
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
turn-client-proto.workspace = true
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
