[package]
name = "turn-types"
description = "TURN parsing and writing"
version.workspace = true
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT OR Apache-2.0"
keywords = ["TURN"]
categories = ["network-programming", ]
documentation = "https://docs.rs/turn-types"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
stun-types.workspace = true
stun-proto.workspace = true
tracing.workspace = true

[features]
default = ["std"]
std = ["stun-proto/std", "stun-types/std"]

[dev-dependencies]
tracing-subscriber.workspace = true
